fix align

--- a/css/signin.css
+++ b/css/signin.css
@@ -40,9 +40,9 @@ body {
 }
 
 #logbuttons{
-  margin-left: 70px;
+  margin-left: 50%;
 }
 
 .checkbox{
-    margin-left: 25px;
+    margin-left: 50%;
 }
